--- a/src/views/IdentityOverview/IdentityOverview.module.css
+++ b/src/views/IdentityOverview/IdentityOverview.module.css
@@ -56,7 +56,8 @@
     no-repeat right 0.75rem center/0.375rem 0.75rem;
 }
 
-.upgrade {
+.upgrade,
+.manage {
   composes: buttonWide;
   background:
     url('../../components/images/manage-did.svg') no-repeat 0.75rem center,
