SK-409: Credentials Overview

--- a/src/components/PasswordField/PasswordField.module.css
+++ b/src/components/PasswordField/PasswordField.module.css
@@ -8,7 +8,7 @@
 
 .reset {
   composes: smallText from '../Typography/Typography.module.css';
-  color: var(--color-light);
+  color: var(--color-lightest);
 }
 
 .passwordLabel {
