--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -12,20 +12,17 @@
 }
 
 .credentials {
-  composes: table from '../../components/Table/Table.module.css';
-  font-size: calc(9rem / 16);
-  align-self: stretch;
-  margin: 2rem 0 0.25rem;
+  list-style: none;
+  height: calc(288rem / 16);
+  width: calc(100% + 3rem);
+  margin: 0.25rem -1.5rem 0 -1.5rem;
+  padding: 0.75rem 0 0;
+  background: var(--color-dark);
+  box-shadow: inset 0 3px 6px 0 rgb(var(--color-black-rgb) / 30%);
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
-.valid {
-  composes: td from '../../components/Table/Table.module.css';
-  background-image: url('../../components/images/checkmark.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 0.75rem;
-}
-
-.close {
-  composes: buttonPrimary from '../../components/Button/Button.module.css';
+.credentials::-webkit-scrollbar {
+  display: none;
 }
