--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -13,14 +13,12 @@
 
 .expand {
   composes: smallText from '../../components/Typography/Typography.module.css';
-
   color: var(--color-grey-light);
   display: inline-flex;
   width: 100%;
   height: 3.25rem;
   padding: calc(11rem / 16) 0 0;
-  background: url('../../components/images/chevron-down.svg') no-repeat right
-    1rem top 0.75rem/0.75rem;
+  background: url('../../components/images/chevron-down.svg') no-repeat right 1rem top 0.75rem/0.75rem;
   border: none;
   cursor: pointer;
 }
@@ -54,13 +52,11 @@
 
 .detailName {
   composes: ellipsis;
-
   width: 35%;
 }
 
 .detailFirstProp {
   composes: ellipsis;
-
   width: 60%;
 }
 
@@ -71,7 +67,6 @@
 
 .collapse {
   composes: buttonIcon from '../../components/Button/Button.module.css';
-
   position: absolute;
   top: 0.75rem;
   right: 1rem;
