--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -15,7 +15,7 @@
   list-style: none;
   height: calc(288rem / 16);
   width: calc(100% + 3rem);
-  margin: 0.25rem -1.5rem 0 -1.5rem;
+  margin: 0.25rem -1.5rem 0;
   padding: 0.75rem 0 0;
   background: var(--color-dark);
   box-shadow: inset 0 3px 6px 0 rgb(var(--color-black-rgb) / 30%);
