changed class names

--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -35,7 +35,7 @@
   background-color: var(--color-lighter);
 }
 
-.details {
+.collapsedDetails {
   display: flex;
   align-items: flex-start;
   margin: 0;
@@ -50,12 +50,12 @@
   text-overflow: ellipsis;
 }
 
-.detailName {
+.collapsedName {
   composes: ellipsis;
   width: 35%;
 }
 
-.detailFirstProp {
+.collapsedFirstProp {
   composes: ellipsis;
   width: 60%;
 }
