--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -54,6 +54,22 @@
   opacity: 0.4;
 }
 
+.buttonWide {
+  composes: buttonPrimary;
+  width: 100%;
+  padding: 0;
+  border: none;
+  box-shadow: none;
+  margin: 0.25rem 0;
+
+  --wide-button-icon: url('../../components/images/chevron-right.svg');
+
+  background:
+    var(--wide-button-icon) no-repeat 0.75rem center,
+    rgb(var(--color-black-rgb) / 30%) url('../../components/images/chevron-right.svg')
+    no-repeat right 0.75rem center/0.375rem 0.75rem;
+}
+
 .buttonIcon {
   border: 0;
   padding: 0;
