--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -8,9 +8,9 @@
   --color-dark: #172a40;
   --color-dark-rgb: 23 42 64;
   --color-medium: #2e3f53;
-  --color-medium-rgb: 46, 63, 83;
+  --color-medium-rgb: 46 63 83;
   --color-lighter: #3e5571;
-  --color-lighter-rgb: 62, 85, 113;
+  --color-lighter-rgb: 62 85 113;
   --color-lightest: #8aafe5;
   --color-lightest-rgb: 138 175 229;
   --color-green: #5ab9aa;
