--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -35,7 +35,7 @@
   background-color: var(--color-lighter);
 }
 
-.collapsedDetails {
+.collapsedCredential {
   display: flex;
   align-items: flex-start;
   margin: 0;
@@ -53,11 +53,14 @@
 .collapsedName {
   composes: ellipsis;
   width: 35%;
+  margin: 0;
 }
 
 .collapsedFirstProp {
   composes: ellipsis;
   width: 60%;
+  margin: 0;
+  padding-left: 1.5rem;
 }
 
 .expanded {
