SK-409: Credentials Overview (#896)

--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -7,8 +7,12 @@
   --color-orange-rgb: 255 101 0;
   --color-dark: #172a40;
   --color-dark-rgb: 23 42 64;
-  --color-light: #8aafe5;
-  --color-light-rgb: 138 175 229;
+  --color-medium: #2e3f53;
+  --color-medium-rgb: 46 63 83;
+  --color-lighter: #3e5571;
+  --color-lighter-rgb: 62 85 113;
+  --color-lightest: #8aafe5;
+  --color-lightest-rgb: 138 175 229;
   --color-green: #5ab9aa;
   --color-green-rgb: 90 185 170;
   --color-grey-light: #f2efee;
