--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -1,79 +1,31 @@
 .credentialsList {
-  list-style: none;
-  padding: 0;
+  composes: list from '../Card/Card.module.css';
 }
 
 .credential {
-  box-sizing: border-box;
-  width: 100%;
-  border-radius: 0.75rem 0.75rem 0 0;
-  border: 1px solid rgb(var(--color-white-rgb) / 10%);
-  box-shadow: 0 -1px 2px 0 rgb(var(--color-black-rgb) / 30%);
+  composes: card from '../Card/Card.module.css';
 }
 
 .expand {
-  composes: smallText from '../../components/Typography/Typography.module.css';
-  color: var(--color-grey-light);
-  display: inline-flex;
-  width: 100%;
-  height: 3.25rem;
-  padding: calc(11rem / 16) 0 0;
-  background: url('../../components/images/chevron-down.svg') no-repeat right 1rem top 0.75rem/0.75rem;
-  border: none;
-  cursor: pointer;
-}
-
-.credential:not(:first-child) {
-  margin-top: -1rem;
-}
-
-.credential:nth-child(2n + 1) {
-  background-color: var(--color-medium);
-}
-
-.credential:nth-child(2n) {
-  background-color: var(--color-lighter);
+  composes: expand from '../Card/Card.module.css';
 }
 
 .collapsedCredential {
-  display: flex;
-  align-items: flex-start;
-  margin: 0;
-  padding-left: 1.5rem;
-  text-align: start;
-  width: 85%;
-}
-
-.ellipsis {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  composes: collapsedCard from '../Card/Card.module.css';
 }
 
 .collapsedName {
-  composes: ellipsis;
-  width: 35%;
-  margin: 0;
+  composes: collapsedName from '../Card/Card.module.css';
 }
 
 .collapsedFirstProp {
-  composes: ellipsis;
-  width: 60%;
-  margin: 0;
-  padding-left: 1.5rem;
+  composes: collapsedFirstProp from '../Card/Card.module.css';
 }
 
 .expanded {
-  height: 12rem;
-  position: relative;
+  composes: expanded from '../Card/Card.module.css';
 }
 
 .collapse {
-  composes: buttonIcon from '../../components/Button/Button.module.css';
-  position: absolute;
-  top: 0.75rem;
-  right: 1rem;
-  width: 0.75rem;
-  height: 0.75rem;
-  background-image: url('../../components/images/chevron-up.svg');
+  composes: collapse from '../Card/Card.module.css';
 }
