--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -34,6 +34,8 @@
   flex-direction: column;
   align-items: center;
   gap: 0.75rem;
+
+  --button-size: 0.75rem;
 }
 
 .collapse {
@@ -42,15 +44,15 @@
 
 .backup {
   composes: buttonIcon from '../../components/Button/Button.module.css';
-  width: 0.75rem;
-  height: 0.75rem;
+  width: var(--button-size);
+  height: var(--button-size);
   background-image: url('../../components/images/backup.svg');
 }
 
 .remove {
   composes: buttonIcon from '../../components/Button/Button.module.css';
-  width: 0.75rem;
-  height: 0.875rem;
+  width: var(--button-size);
+  height: var(--button-size);
   background-image: url('../../components/images/trash-bin.svg');
 }
 
