--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -26,6 +26,79 @@
   composes: expanded from '../Card/Card.module.css';
 }
 
+.buttons {
+  position: absolute;
+  top: 0.75rem;
+  right: 1.125rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.75rem;
+
+  --button-size: 0.75rem;
+}
+
 .collapse {
   composes: collapse from '../Card/Card.module.css';
+}
+
+.backup {
+  composes: buttonIcon from '../../components/Button/Button.module.css';
+  width: var(--button-size);
+  height: var(--button-size);
+  background-image: url('../../components/images/backup.svg');
+}
+
+.remove {
+  composes: buttonIcon from '../../components/Button/Button.module.css';
+  width: var(--button-size);
+  height: var(--button-size);
+  background-image: url('../../components/images/trash-bin.svg');
+}
+
+.details {
+  composes: details from '../Card/Card.module.css';
+}
+
+.detail {
+  composes: detail from '../Card/Card.module.css';
+}
+
+.detailName {
+  composes: detailName from '../Card/Card.module.css';
+}
+
+.detailValue {
+  composes: detailValue from '../Card/Card.module.css';
+}
+
+.nameValue {
+  composes: detailValue;
+  padding-right: 1rem;
+  position: relative;
+}
+
+.editName {
+  composes: buttonIcon from '../../components/Button/Button.module.css';
+  width: 0.75rem;
+  height: 0.75rem;
+  background-image: url('../../components/images/pencil-opaque.svg');
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.input {
+  composes: inputName from '../Input/Input.module.css';
+  height: 1.5rem;
+  font-size: 0.75rem;
+  background-size: 0.75rem, auto;
+}
+
+.hash {
+  composes: hash from '../Card/Card.module.css';
+}
+
+.technical {
+  composes: technical from '../Card/Card.module.css';
 }
