--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -11,18 +11,41 @@
   margin: 0 0 0.8125rem;
 }
 
-.credentials {
-  list-style: none;
+.credentialsContainer {
   height: calc(288rem / 16);
   width: calc(100% + 3rem);
   margin: 0.25rem -1.5rem 0;
   padding: 0.75rem 0 0;
   background: var(--color-dark);
-  box-shadow: inset 0 3px 6px 0 rgb(var(--color-black-rgb) / 30%);
+  box-shadow:
+    inset 0 -3px 6px 0 rgb(var(--color-black-rgb) / 30%),
+    inset 0 3px 6px 0 rgb(var(--color-black-rgb) / 30%);
+}
+
+.credentials {
+  composes: credentialsContainer;
+  list-style: none;
   overflow-y: scroll;
   scrollbar-width: none;
 }
 
 .credentials::-webkit-scrollbar {
   display: none;
+}
+
+.noCredentials {
+  composes: credentialsContainer;
+}
+
+.info {
+  composes: importantHeadline from '../../components/Typography/Typography.module.css';
+  font-size: 2rem;
+  color: rgb(var(--color-white-rgb) / 33%);
+  white-space: pre-line;
+  margin: 1rem 0;
+  line-height: 2.5rem;
+}
+
+.explainerLink {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
