--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,18 @@
 .list {
+  width: calc(100% + 3rem);
+  margin: 0.25rem -1.5rem 0;
+  padding: 0.75rem 0 0;
+  background: var(--color-dark);
+  box-shadow:
+    inset 0 -3px 6px 0 rgb(var(--color-black-rgb) / 30%),
+    inset 0 3px 6px 0 rgb(var(--color-black-rgb) / 30%);
   list-style: none;
-  padding: 0;
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.list::-webkit-scrollbar {
+  display: none;
 }
 
 .card {
