do not cache DID data in the flow

--- a/src/views/DidEndpointsForm/DidEndpointsForm.module.css
+++ b/src/views/DidEndpointsForm/DidEndpointsForm.module.css
@@ -125,3 +125,7 @@
   margin-bottom: 0.75rem;
   word-break: break-word;
 }
+
+.linkBack {
+  composes: linkBack from '../../components/LinkBack/LinkBack.module.css';
+}
