prevent adding too many endpoints

--- a/src/views/DidEndpointsForm/DidEndpointsForm.module.css
+++ b/src/views/DidEndpointsForm/DidEndpointsForm.module.css
@@ -110,6 +110,12 @@
   composes: buttonSecondary from '../../components/Button/Button.module.css';
 }
 
+.errorTooltip {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+  top: 2.5rem;
+  left: 70%;
+}
+
 .endpoint {
   composes: card;
 }
