SK-557: add and remove Service Endpoints (#917)

--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -11,30 +11,9 @@
   margin: 0 0 0.8125rem;
 }
 
-.credentialsContainer {
-  height: calc(288rem / 16);
-  width: calc(100% + 3rem);
-  margin: 0.25rem -1.5rem 0;
-  padding: 0.75rem 0 0;
-  background: var(--color-dark);
-  box-shadow:
-    inset 0 -3px 6px 0 rgb(var(--color-black-rgb) / 30%),
-    inset 0 3px 6px 0 rgb(var(--color-black-rgb) / 30%);
-}
-
 .credentials {
-  composes: credentialsContainer;
-  list-style: none;
-  overflow-y: scroll;
-  scrollbar-width: none;
-}
-
-.credentials::-webkit-scrollbar {
-  display: none;
-}
-
-.noCredentials {
-  composes: credentialsContainer;
+  composes: list from '../../components/Card/Card.module.css';
+  height: calc(288rem / 16);
 }
 
 .info {
