SK-640: no credentials link leads to SocialKYC

--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -18,11 +18,9 @@
 
 .info {
   composes: importantHeadline from '../../components/Typography/Typography.module.css';
-  font-size: 2rem;
+  font-size: 1.125rem;
   color: rgb(var(--color-white-rgb) / 33%);
-  white-space: pre-line;
-  margin: 1rem 0;
-  line-height: 2.5rem;
+  margin: 5rem 0 1.25rem;
 }
 
 .explainerLink {
