--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -22,16 +22,8 @@
 }
 
 .addressLine {
-  position: relative;
-  width: 100%;
+  composes: line from '../../components/CopyValue/CopyValue.module.css';
   margin: 0.25rem 0 1rem;
-}
-
-.address {
-  composes: input from '../../components/Input/Input.module.css';
-  font-size: 0.75rem;
-  width: calc(100% - 3.5rem);
-  padding-right: 2.5rem;
 }
 
 .details {
