--- a/src/views/DidEndpointsForm/DidEndpointsForm.module.css
+++ b/src/views/DidEndpointsForm/DidEndpointsForm.module.css
@@ -11,6 +11,11 @@
   margin: 0 0 0.8125rem;
 }
 
+.didLine {
+  composes: line from '../../components/CopyValue/CopyValue.module.css';
+  margin-top: 1rem;
+}
+
 .loading {
   composes: spinner from '../../components/LoadingSpinner/LoadingSpinner.module.css';
   margin: auto;
@@ -18,8 +23,8 @@
 
 .list {
   composes: list from '../../components/Card/Card.module.css';
-  height: calc(288rem / 16);
-  margin-top: 1.5rem;
+  height: calc(250rem / 16);
+  margin-top: 0.75rem;
 }
 
 .card {
@@ -95,6 +100,7 @@
 .input {
   composes: input from '../../components/Input/Input.module.css';
   width: calc(100% - 2rem);
+  height: 1.5rem;
 }
 
 .buttonsLine {
