--- a/src/views/SaveCredential/SaveCredential.module.css
+++ b/src/views/SaveCredential/SaveCredential.module.css
@@ -7,29 +7,9 @@
   margin-bottom: 1rem;
 }
 
-.subline {
-  composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.25rem 0 0.5rem;
-}
-
-.details {
-  composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0;
-  display: flex;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-}
-
-.detailName {
-  width: 35%;
-  margin: 0.125rem;
-  text-align: left;
-}
-
-.detailValue {
-  width: 50%;
-  margin: 0.125rem;
-  text-align: left;
+.cardContainer {
+  composes: list from '../../components/Card/Card.module.css';
+  max-height: calc(250rem / 16);
 }
 
 .warning {
@@ -38,32 +18,19 @@
   font-size: 1.375rem;
 }
 
-.label {
-  composes: smallText from '../../components/Typography/Typography.module.css';
-  text-align: left;
-  width: 100%;
+.downloaded {
+  color: var(--color-lightest);
 }
 
-.name {
-  composes: inputName from '../../components/Input/Input.module.css';
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: 0.5rem;
-}
-
-.buttonsLine {
-  composes: buttonsLine from '../../components/Button/Button.module.css';
-  margin-top: 1.5rem;
-}
-
-.cancel {
-  composes: buttonSecondary from '../../components/Button/Button.module.css';
-}
-
-.submit {
+.download {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
 
-.submit[aria-disabled='true'] {
-  pointer-events: none;
+.done {
+  composes: subline from '../../components/Typography/Typography.module.css';
+}
+
+.close {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  padding: 0;
 }
