--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -116,7 +116,7 @@
 }
 
 .hash {
-  composes: hash from '../Card/Card.module.css';
+  composes: fullWidthDetail from '../Card/Card.module.css';
 }
 
 .technical {
