--- a/src/views/ShareCredentialSelect/ShareCredentialSelect.module.css
+++ b/src/views/ShareCredentialSelect/ShareCredentialSelect.module.css
@@ -12,10 +12,28 @@
 }
 
 .allCredentials {
-  composes: scrollContainer from '../../components/Card/Card.module.css';
+  composes: list from '../../components/Card/Card.module.css';
   height: calc(370rem / 16);
   padding: 0;
   margin-top: 0.75rem;
+}
+
+.noCredentials {
+  composes: allCredentials;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.info {
+  composes: importantHeadline from '../../components/Typography/Typography.module.css';
+  font-size: 1.125rem;
+  color: rgb(var(--color-white-rgb) / 33%);
+}
+
+.explainerLink {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
 
 .identityLine {
@@ -51,7 +69,8 @@
 }
 
 .list {
-  composes: list from '../../components/Card/Card.module.css';
+  list-style: none;
+  padding: 0;
   margin: 0;
 }
 
