Removed unnecessary classes

--- a/src/views/ShareCredentialSelect/ShareCredentialSelect.module.css
+++ b/src/views/ShareCredentialSelect/ShareCredentialSelect.module.css
@@ -61,7 +61,7 @@
 }
 
 .identityCredentials {
-  composes: cardsContainer from '../../components/Card/Card.module.css';
+  composes: list from '../../components/Card/Card.module.css';
   margin: 0;
   padding: 0;
   height: auto;
