--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -51,6 +51,10 @@
   cursor: pointer;
 }
 
+.card:last-child .expand {
+  height: 2.25rem;
+}
+
 .cardText {
   composes: smallText from '../../components/Typography/Typography.module.css';
   color: var(--color-grey-light);
@@ -78,7 +82,7 @@
   margin: 0;
 }
 
-.collapsedFirstProp {
+.collapsedValue {
   composes: ellipsis;
   width: 60%;
   margin: 0;
@@ -122,8 +126,8 @@
   margin: 0;
 }
 
-.hash {
-  composes: detailValue;
+.fullWidthDetail {
+  composes: detail;
   grid-column: span 2;
 }
 
