--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -6,30 +6,50 @@
   composes: card from '../Card/Card.module.css';
 }
 
+.selectable {
+  composes: credential;
+  position: relative;
+}
+
 .expand {
   composes: expand from '../Card/Card.module.css';
+}
+
+.shareExpand {
+  composes: expand;
 }
 
 .collapsedCredential {
   composes: collapsedCard from '../Card/Card.module.css';
 }
 
+.collapsedShareCredential {
+  composes: collapsedCredential;
+  padding-left: 3rem;
+  width: 80%;
+}
+
 .collapsedName {
   composes: collapsedName from '../Card/Card.module.css';
 }
 
-.collapsedFirstProp {
-  composes: collapsedFirstProp from '../Card/Card.module.css';
+.collapsedValue {
+  composes: collapsedValue from '../Card/Card.module.css';
 }
 
 .expanded {
   composes: expanded from '../Card/Card.module.css';
 }
 
+.shareExpanded {
+  composes: expanded;
+  padding: 0.75rem 2.5rem 2rem 3rem;
+}
+
 .buttons {
   position: absolute;
   top: 0.75rem;
-  right: 1.125rem;
+  right: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -96,9 +116,65 @@
 }
 
 .hash {
-  composes: hash from '../Card/Card.module.css';
+  composes: fullWidthDetail from '../Card/Card.module.css';
 }
 
 .technical {
   composes: technical from '../Card/Card.module.css';
+}
+
+.shareTechnical {
+  composes: technical;
+  margin-left: -1.5rem;
+}
+
+.select {
+  --diameter: 0.75rem;
+
+  appearance: none;
+  position: absolute;
+  top: 0.75rem;
+  left: 1.5rem;
+  margin: 0;
+  height: var(--diameter);
+  width: var(--diameter);
+  border: 1px solid var(--color-white);
+  border-radius: 50%;
+  background: linear-gradient(#547099 0%, #304765 43.95%, #0a1b2f 100%);
+}
+
+.select:checked {
+  background: content-box var(--color-green);
+  padding: 3px;
+}
+
+.share {
+  composes: checkbox from '../../components/Checkbox/Checkbox.module.css';
+}
+
+.shareLabel {
+  display: flex;
+}
+
+.share + * {
+  width: 0.75rem;
+  height: 0.75rem;
+  flex-shrink: 0;
+  margin-right: 0.25rem;
+}
+
+.notAttested {
+  opacity: 0.3;
+}
+
+.required::after {
+  content: ' * ';
+}
+
+.requiredInfo {
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  font-size: 0.625rem;
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
 }
