--- a/src/views/GenericError/GenericError.module.css
+++ b/src/views/GenericError/GenericError.module.css
@@ -3,9 +3,15 @@
   background: url('../../components/images/transaction-error.svg') no-repeat top center/4rem;
   padding-top: 5rem;
   margin-top: 0;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 .text a {
   color: var(--color-lightest);
+}
+
+.details {
+  composes: input from '../../components/Input/Input.module.css';
+  height: 5rem;
+  margin-bottom: 1.5rem;
 }
