--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -178,3 +178,29 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.overlay {
+  composes: overlay from '../../components/Overlay/Overlay.module.css';
+}
+
+.warning {
+  composes: heading from '../../components/Overlay/Overlay.module.css';
+  background: url('../../components/images/transaction-error.svg') no-repeat top center/4rem;
+  padding-top: 5rem;
+  margin: 0;
+  color: var(--color-orange);
+}
+
+.explanation {
+  composes: text from '../../components/Overlay/Overlay.module.css';
+}
+
+.cancel {
+  composes: button from '../../components/Overlay/Overlay.module.css';
+  margin: 0.75rem 0;
+}
+
+.confirm {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  padding: 0;
+}
