--- a/src/views/DidDowngrade/DidDowngrade.module.css
+++ b/src/views/DidDowngrade/DidDowngrade.module.css
@@ -22,7 +22,7 @@
 
 .details {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.5rem 0 1.5rem;
+  margin: 0.5rem 0;
 }
 
 .info {
@@ -51,4 +51,8 @@
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
   top: 2.5rem;
   left: 75%;
+}
+
+.explanation {
+  composes: subline from '../../components/Typography/Typography.module.css';
 }
