SK-344: import credentials

--- a/src/views/ShareCredentialSelect/ShareCredentialSelect.module.css
+++ b/src/views/ShareCredentialSelect/ShareCredentialSelect.module.css
@@ -37,27 +37,8 @@
 }
 
 .identityLine {
-  composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0;
-  height: 3.25rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1.5rem;
-}
-
-.identity {
-  display: flex;
-  align-items: center;
-  margin: 0;
-}
-
-.avatar {
-  composes: avatar from '../../components/Avatar/Avatar.module.css';
-  height: 1.75rem;
-  width: 1.75rem;
-  background: none;
-  margin-right: 0.75rem;
+  composes: component from '../../components/IdentityLine/IdentityLine.module.css';
+  padding-inline: 1.5rem;
 }
 
 .identityCredentials {
