--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -66,7 +66,7 @@
   --wide-button-icon: url('../../components/images/chevron-right.svg');
 
   background:
-    var(--wide-button-icon) no-repeat 0.75rem center,
+    var(--wide-button-icon) no-repeat 0.75rem center/1.5rem,
     rgb(var(--color-black-rgb) / 30%) url('../../components/images/chevron-right.svg')
     no-repeat right 0.75rem center/0.375rem 0.75rem;
 }
