--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -15,6 +15,10 @@
   composes: expand from '../Card/Card.module.css';
 }
 
+.downloadPrompt {
+  composes: downloadPrompt from '../Card/Card.module.css';
+}
+
 .shareExpand {
   composes: expand;
 }
@@ -47,33 +51,23 @@
 }
 
 .buttons {
-  position: absolute;
-  top: 0.75rem;
-  right: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.75rem;
-
-  --button-size: 0.75rem;
+  composes: buttons from '../Card/Card.module.css';
 }
 
 .collapse {
   composes: collapse from '../Card/Card.module.css';
 }
 
-.backup {
-  composes: buttonIcon from '../../components/Button/Button.module.css';
-  width: var(--button-size);
-  height: var(--button-size);
-  background-image: url('../../components/images/backup.svg');
+.download {
+  composes: download from '../Card/Card.module.css';
+}
+
+.downloadPromptExpanded {
+  composes: downloadPromptExpanded from '../Card/Card.module.css';
 }
 
 .remove {
-  composes: buttonIcon from '../../components/Button/Button.module.css';
-  width: var(--button-size);
-  height: var(--button-size);
-  background-image: url('../../components/images/trash-bin.svg');
+  composes: remove from '../Card/Card.module.css';
 }
 
 .details {
@@ -195,12 +189,40 @@
   composes: text from '../../components/Overlay/Overlay.module.css';
 }
 
-.cancel {
-  composes: button from '../../components/Overlay/Overlay.module.css';
-  margin: 0.75rem 0;
-}
-
-.confirm {
+.confirmDelete {
   composes: buttonSecondary from '../../components/Button/Button.module.css';
   padding: 0;
+}
+
+.cancelDelete {
+  composes: button from '../../components/Overlay/Overlay.module.css';
+  margin: 1rem 0;
+}
+
+.downloadInfo {
+  composes: text from '../../components/Overlay/Overlay.module.css';
+  background: url('../../components/images/info.svg') no-repeat top center/4rem;
+  padding-top: 5rem;
+  margin: 0;
+}
+
+.confirmDownload {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
+  margin: 0.75rem 0 0.5rem;
+}
+
+.cancelDownload {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+}
+
+.toggleLabel {
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.toggle {
+  composes: toggle from '../../components/Toggle/Toggle.module.css';
 }
