--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -67,7 +67,7 @@
   top: calc(11rem / 16);
   right: 2.25rem;
   background: var(--color-orange);
-  border: 1px solid rgba(var(--color-black-rgb), 0.15);
+  border: 1px solid rgb(var(--color-black-rgb) / 15%);
 }
 
 .card:last-child .expand {
@@ -158,7 +158,7 @@
   top: -0.125rem;
   left: -0.125rem;
   background: var(--color-orange);
-  border: 1px solid rgba(var(--color-black-rgb), 0.15);
+  border: 1px solid rgb(var(--color-black-rgb) / 15%);
 }
 
 .remove {
