--- a/src/views/DidEndpointsForm/DidEndpointsForm.module.css
+++ b/src/views/DidEndpointsForm/DidEndpointsForm.module.css
@@ -50,6 +50,7 @@
   padding: 0.75rem 0;
   height: auto;
   background-position: right center;
+  text-decoration: none;
 }
 
 .collapsedCard {
@@ -136,8 +137,4 @@
   margin-top: 0.125rem;
   margin-bottom: 0.75rem;
   word-break: break-word;
-}
-
-.linkBack {
-  composes: linkBack from '../../components/LinkBack/LinkBack.module.css';
 }
