--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -66,6 +66,10 @@
   composes: downloadPromptExpanded from '../Card/Card.module.css';
 }
 
+.presentation {
+  composes: presentation from '../Card/Card.module.css';
+}
+
 .remove {
   composes: remove from '../Card/Card.module.css';
 }
