--- a/src/views/IdentityOverview/IdentityOverview.module.css
+++ b/src/views/IdentityOverview/IdentityOverview.module.css
@@ -56,6 +56,13 @@
   --wide-button-icon: url('../../components/images/manage-did.svg');
 }
 
+.repair {
+  composes: buttonWide from '../../components/Button/Button.module.css';
+  color: var(--color-orange);
+
+  --wide-button-icon: url('../../components/images/repair-did.svg');
+}
+
 .avatarSmall {
   composes: avatar from '../../components/Avatar/Avatar.module.css';
 
