SK-798: create presentation updates

--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -230,3 +230,16 @@
 .toggle {
   composes: toggle from '../../components/Toggle/Toggle.module.css';
 }
+
+.learnMore {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  color: var(--color-orange);
+  white-space: nowrap;
+  padding-right: 0;
+}
+
+.buttonsLine {
+  composes: buttonsLine from '../../components/Button/Button.module.css';
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
