--- a/src/views/CreatePresentation/CreatePresentation.module.css
+++ b/src/views/CreatePresentation/CreatePresentation.module.css
@@ -8,7 +8,7 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.25rem 0 0;
+  margin: 0.25rem 0 0.5rem;
 }
 
 .credentialsList {
