SK-798: chrome scroll in dialog

--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -242,4 +242,5 @@
   composes: buttonsLine from '../../components/Button/Button.module.css';
   margin-top: 0;
   margin-bottom: 0.5rem;
+  max-width: 100%;
 }
