SK-751: create web3name: sign

--- a/src/views/DidManage/DidManage.module.css
+++ b/src/views/DidManage/DidManage.module.css
@@ -21,6 +21,11 @@
   margin-top: 1.5rem;
 }
 
+.web3NameLine {
+  composes: line from '../../components/CopyValue/CopyValue.module.css';
+  text-align: center;
+}
+
 .endpoints {
   composes: link;
 
