--- a/src/views/W3NCreateInfo/W3NCreateInfo.module.css
+++ b/src/views/W3NCreateInfo/W3NCreateInfo.module.css
@@ -13,7 +13,7 @@
 }
 
 .didLine {
-  composes: line from '../../components/CopyValue/CopyValue.module.css';
+  composes: didLine from '../../components/CopyValue/CopyValue.module.css';
   margin-top: 1.5rem;
 }
 
