--- a/src/components/CopyValue/CopyValue.module.css
+++ b/src/components/CopyValue/CopyValue.module.css
@@ -1,17 +1,33 @@
 .line {
+  --copy-value-icon: '';
+
   position: relative;
   width: 100%;
   margin: 0;
 }
 
+.kiltLine {
+  composes: line;
+
+  --copy-value-icon: url('../images/kilt-coin-circle.svg');
+}
+
+.didLine {
+  composes: line;
+
+  --copy-value-icon: url('../images/manage-did.svg');
+}
+
 .input {
   composes: input from '../../components/Input/Input.module.css';
   font-size: 0.75rem;
-  width: calc(100% - 3.5rem);
+  width: calc(100% - 4.5rem);
   padding-right: 2.5rem;
+  padding-left: 2rem;
+  background: var(--copy-value-icon) no-repeat left 0.625rem center/1rem, var(--input-gradient);
 }
 
 .long {
   composes: input;
-  font-size: calc(11rem / 16);
+  font-size: calc(10.5rem / 16);
 }
