--- a/src/views/DidEndpointsSign/DidEndpointsSign.module.css
+++ b/src/views/DidEndpointsSign/DidEndpointsSign.module.css
@@ -12,7 +12,7 @@
 }
 
 .didLine {
-  composes: line from '../../components/CopyValue/CopyValue.module.css';
+  composes: didLine from '../../components/CopyValue/CopyValue.module.css';
   margin-top: 1rem;
 }
 
