--- a/src/views/ReceiveToken/ReceiveToken.module.css
+++ b/src/views/ReceiveToken/ReceiveToken.module.css
@@ -17,7 +17,7 @@
 }
 
 .addressLine {
-  composes: line from '../../components/CopyValue/CopyValue.module.css';
+  composes: kiltLine from '../../components/CopyValue/CopyValue.module.css';
   margin: 0.25rem 0 1.5rem;
 }
 
