--- a/src/views/W3NCreatePromo/W3NCreatePromo.module.css
+++ b/src/views/W3NCreatePromo/W3NCreatePromo.module.css
@@ -1,6 +1,5 @@
 .container {
   composes: container from '../../components/View/View.module.css';
-  height: calc(100% - 3rem);
 }
 
 .heading {
@@ -17,41 +16,26 @@
   margin-top: 1.5rem;
 }
 
-.info {
-  composes: subline from '../../components/Typography/Typography.module.css';
-  line-height: 1.25rem;
-  text-align: left;
-}
-
-.warning {
-  composes: smallImportant from '../../components/Typography/Typography.module.css';
-  width: 100%;
-  text-align: left;
-  margin-top: 0;
-  font-size: 0.875rem;
-}
-
-.promo {
-  composes: checkbox from '../../components/Checkbox/Checkbox.module.css';
-}
-
-.promoLabel {
-  composes: subline from '../../components/Typography/Typography.module.css';
+.costs {
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  font-size: 1.25rem;
+  margin: 0.5rem 0 0;
   display: flex;
-  width: 100%;
   align-items: center;
+  justify-content: center;
 }
 
-.promo + * {
-  height: 0.75rem;
-  width: 0.75rem;
-  flex-shrink: 0;
-  margin-right: 0.25rem;
+.details {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 0.5rem 0 0;
+}
+
+.label {
+  color: var(--color-grey-medium);
 }
 
 .buttonsLine {
   composes: buttonsLine from '../../components/Button/Button.module.css';
-  margin-top: auto;
 }
 
 .next {
