don't override checkbox dimensions

--- a/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
+++ b/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
@@ -49,17 +49,14 @@
 
 .promoLabel {
   composes: subline from '../../components/Typography/Typography.module.css';
-  box-sizing: border-box;
+  align-self: flex-start;
   display: flex;
-  width: 100%;
   align-items: center;
   padding-left: calc(68rem / 16);
   margin-top: 1.5rem;
 }
 
 .promo + * {
-  height: 0.875rem;
-  width: 0.875rem;
   flex-shrink: 0;
   margin-right: 0.25rem;
 }
