SK-846: nicer extrinsic details

--- a/src/views/SignDidExtrinsic/SignDidExtrinsic.module.css
+++ b/src/views/SignDidExtrinsic/SignDidExtrinsic.module.css
@@ -34,7 +34,7 @@
   color: var(--color-grey-light);
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .buttonsLine {
