--- a/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
+++ b/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
@@ -43,22 +43,24 @@
   background: url('../../components/images/deposit.svg') no-repeat left center;
 }
 
-.promo {
-  composes: checkbox from '../../components/Checkbox/Checkbox.module.css';
-}
-
-.promoLabel {
+.promoLine {
   composes: subline from '../../components/Typography/Typography.module.css';
   align-self: flex-start;
-  display: flex;
-  align-items: center;
   padding-left: calc(68rem / 16);
   margin-top: 1.5rem;
+}
+
+.promo {
+  composes: checkbox from '../../components/Checkbox/Checkbox.module.css';
 }
 
 .promo + * {
   flex-shrink: 0;
   margin-right: 0.25rem;
+}
+
+.terms {
+  composes: subline from '../../components/Typography/Typography.module.css';
 }
 
 .buttonsLine {
